--- a/app/src/main/resources/com/fss/everythingapp/simulations/projectile_motion.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/simulations/projectile_motion.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Canvas fx:id="gridCanvas" height="1082.0" layoutX="16.0" layoutY="25.0" width="1464.0" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="456.0" AnchorPane.topAnchor="0.0" />
       <Accordion layoutX="1200.0" prefHeight="232.0" prefWidth="430.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="10.0">
@@ -109,7 +109,7 @@
                         <HBox layoutX="19.0" layoutY="19.0" prefHeight="40.0" prefWidth="368.0">
                            <children>
                               <Label prefHeight="31.0" prefWidth="102.0" text="Ball Size" />
-                              <Slider fx:id="ballSlider" majorTickUnit="10.0" max="50.0" min="10.0" minorTickCount="5" prefHeight="38.0" prefWidth="279.0" showTickLabels="true" showTickMarks="true">
+                              <Slider fx:id="ballSlider" majorTickUnit="10.0" min="10.0" minorTickCount="5" prefHeight="38.0" prefWidth="279.0" showTickLabels="true" showTickMarks="true" value="30.0">
                                  <padding>
                                     <Insets left="10.0" right="10.0" />
                                  </padding>
