--- a/app/src/main/resources/com/fss/everythingapp/simulations/projectile_motion.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/simulations/projectile_motion.fxml
@@ -16,7 +16,7 @@
    <children>
       <Canvas fx:id="gridCanvas" height="1082.0" layoutX="16.0" layoutY="25.0" width="1418.0" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="502.0" AnchorPane.topAnchor="0.0" />
       <Button fx:id="launch" layoutX="1444.0" layoutY="887.0" mnemonicParsing="false" prefHeight="97.0" prefWidth="441.0" text="Launch" />
-      <VBox layoutX="1438.0" layoutY="291.0" prefHeight="284.0" prefWidth="455.0">
+      <VBox layoutX="1438.0" layoutY="291.0" prefHeight="313.0" prefWidth="455.0">
          <children>
             <Label alignment="TOP_CENTER" prefHeight="42.0" prefWidth="428.0" text="VISUAL CONTROLS">
                <font>
@@ -70,7 +70,7 @@
             </HBox>
             <HBox prefHeight="33.0" prefWidth="408.0">
                <children>
-                  <CheckBox fx:id="positionVectors" mnemonicParsing="false" prefHeight="30.0" prefWidth="216.0" text="Show Position Vectors" />
+                  <CheckBox fx:id="showTragectory" mnemonicParsing="false" prefHeight="30.0" prefWidth="216.0" text="Show Tragectory" />
                   <CheckBox fx:id="velocityVectors" mnemonicParsing="false" prefHeight="31.0" prefWidth="193.0" selected="true" text="Show Velocity Vector" />
                </children>
             </HBox>
@@ -87,6 +87,11 @@
                   <Button fx:id="projectileNameButton" mnemonicParsing="false" text="Enter" />
                </children>
             </HBox>
+            <Button fx:id="changeProjectileImage" mnemonicParsing="false" prefHeight="15.0" prefWidth="455.0" text="Change Projectile Image">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </Button>
          </children>
       </VBox>
       <VBox layoutX="1437.0" layoutY="41.0" prefHeight="233.0" prefWidth="455.0">
@@ -158,7 +163,7 @@
             </HBox>
          </children>
       </VBox>
-      <HBox layoutX="1451.0" layoutY="607.0" prefHeight="100.0" prefWidth="441.0">
+      <HBox layoutX="1452.0" layoutY="627.0" prefHeight="100.0" prefWidth="441.0">
          <children>
             <VBox prefHeight="100.0" prefWidth="161.0">
                <children>
