--- a/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fmxl/AppointmentLayout.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fmxl/AppointmentLayout.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
@@ -35,4 +36,11 @@
          </children>
       </VBox>
    </center>
+   <bottom>
+      <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <buttons>
+          <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#onExitBtnPressed" text="Exit" />
+        </buttons>
+      </ButtonBar>
+   </bottom>
 </BorderPane>
