--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/MonthView.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/MonthView.fxml
@@ -50,7 +50,10 @@
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
       </GridPane>
-      <ScrollPane prefHeight="250.0" prefWidth="335.0" />
+      <ScrollPane prefHeight="250.0" prefWidth="335.0">
+         <content>
+            <VBox prefHeight="200.0" prefWidth="100.0" />
+         </content></ScrollPane>
       <HBox alignment="CENTER" prefHeight="2.0" prefWidth="335.0">
          <children>
             <Button mnemonicParsing="false" onAction="#exit" text="Exit">
