--- a/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fmxl/TimeslotsLayout.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fmxl/TimeslotsLayout.fxml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
-
 
 <BorderPane xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="TimeslotsController">
    <center>
       <VBox BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#buttonOnePressed" text="9:00 am - 9:30 am" />
-            <Button mnemonicParsing="false" onAction="#buttonTwoPressed" text="9:30 am - 10:00 am" />
-            <Button mnemonicParsing="false" onAction="#buttonThreePressed" text="10:00 am - 10:30 am" />
-            <Button mnemonicParsing="false" onAction="#buttonFourPressed" text="10:30 am - 11:00 am" />
-            <Button mnemonicParsing="false" onAction="#buttonFivePressed" text="11:00 am - 11:30 am" />
-            <Button mnemonicParsing="false" onAction="#buttonSixPressed" text="11:30 am - 12:00 pm" />
-            <Button mnemonicParsing="false" onAction="#buttonSevenPressed" text="12:00 am - 12:30 pm" />
-            <Button mnemonicParsing="false" onAction="#buttonEightPressed" text="12:30 pm - 1:00 pm" />
+            <Label text="Choose a Date" />
+            <ChoiceBox fx:id="dateBox" />
+            <Label text="Choose a Timeslot" />
+            <ChoiceBox fx:id="timeBox" />
          </children>
       </VBox>
    </center>
-   <top>
-      <Label text="Choose a Timeslot" BorderPane.alignment="CENTER" />
-   </top>
+   <bottom>
+      <Button mnemonicParsing="false" onAction="#enterBtnPressed" text="Enter" BorderPane.alignment="CENTER" />
+   </bottom>
 </BorderPane>
