--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/Preferences.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/Preferences.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
 <BorderPane prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.fitness.Controllers.PreferencesController">
 
@@ -44,9 +45,9 @@
                   <Button mnemonicParsing="false" onAction="#submitActivity" text="Submit" />
                </children>
             </VBox>
-            <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0">
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Button alignment="BOTTOM_CENTER" mnemonicParsing="false" onAction="#backToMenu" prefHeight="25.0" prefWidth="43.0" text="Back" />
+                  <Text fx:id="submitErrorPrompt" strokeType="OUTSIDE" strokeWidth="0.0" text="Please Select all options before submitting" visible="false" />
                </children>
             </VBox>
          </children>
