--- a/app/src/main/resources/com/fss/everythingapp/businfo/List.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/businfo/List.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
@@ -11,6 +12,7 @@
       <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <items>
           <Button mnemonicParsing="false" onAction="#quit" text="Exit" />
+            <Button fx:id="debug" mnemonicParsing="false" text="Debug" />
         </items>
       </ToolBar>
    </bottom>
@@ -21,4 +23,12 @@
          </content>
       </ScrollPane>
    </center>
+   <top>
+      <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <items>
+            <TextField fx:id="searchBox" />
+            <Button mnemonicParsing="false" onAction="#updateSearch" text="Search" />
+         </items>
+      </ToolBar>
+   </top>
 </BorderPane>
