--- a/app/src/main/resources/com/fss/everythingapp/businfo/List.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/businfo/List.fxml
@@ -12,7 +12,7 @@
       <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <items>
           <Button mnemonicParsing="false" onAction="#quit" text="Exit" />
-            <Button fx:id="debug" mnemonicParsing="false" text="Debug" />
+            <Button mnemonicParsing="false" onAction="#debug" text="Debug" />
         </items>
       </ToolBar>
    </bottom>
