--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/MonthView.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/MonthView.fxml
@@ -68,5 +68,6 @@
             </Button>
          </children>
       </HBox>
+      <Button mnemonicParsing="false" onAction="#showDates" text="Show Dates" />
    </children>
 </VBox>
