--- a/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fxml/AppointmentLayout.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fxml/AppointmentLayout.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AppointmentController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <Label text="Student Services Apointments" BorderPane.alignment="CENTER">
          <font>
@@ -37,7 +37,7 @@
       </VBox>
    </center>
    <bottom>
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <ButtonBar BorderPane.alignment="CENTER">
         <buttons>
           <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#onExitBtnPressed" text="Exit" />
         </buttons>
