--- a/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fxml/TimeslotsLayout.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fxml/TimeslotsLayout.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="TimeslotsController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <VBox BorderPane.alignment="CENTER">
          <children>
