--- a/app/src/main/resources/com/fss/everythingapp/businfo/Info.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/businfo/Info.fxml
@@ -4,10 +4,10 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
 <StackPane fx:id="rootContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -15,8 +15,7 @@
          <bottom>
             <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
               <items>
-                <Button mnemonicParsing="false" onAction="#quit" text="Exit" />
-                  <Button fx:id="debug" mnemonicParsing="false" text="Debug" />
+                <Button mnemonicParsing="false" onAction="#quit" text="Back" />
               </items>
             </ToolBar>
          </bottom>
@@ -28,12 +27,12 @@
             </ScrollPane>
          </center>
          <top>
-            <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-               <items>
-                  <TextField fx:id="searchBox" />
-                  <Button mnemonicParsing="false" onAction="#updateSearch" text="Search" />
-               </items>
-            </ToolBar>
+            <VBox BorderPane.alignment="CENTER">
+               <children>
+                  <ToolBar fx:id="busInfo1" prefHeight="40.0" prefWidth="200.0" />
+                  <ToolBar fx:id="busInfo2" prefHeight="40.0" prefWidth="200.0" />
+               </children>
+            </VBox>
          </top>
       </BorderPane>
       <ProgressIndicator fx:id="progressIndicator" />
