--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateEvent.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateEvent.fxml
@@ -24,12 +24,14 @@
             <Insets bottom="20.0" left="35.0" right="35.0" />
          </VBox.margin>
       </TextField>
-      <DatePicker fx:id="startDatePicker" prefHeight="25.0" prefWidth="125.0" promptText="Start Date">
+      <Label text="Start Date" />
+      <DatePicker fx:id="startDatePicker" prefHeight="25.0" prefWidth="125.0" promptText="yyyy/mm/dd">
          <VBox.margin>
             <Insets bottom="15.0" />
          </VBox.margin>
       </DatePicker>
-      <DatePicker fx:id="endDatePicker" prefHeight="25.0" prefWidth="125.0" promptText="End Date">
+      <Label text="End Date" />
+      <DatePicker fx:id="endDatePicker" prefHeight="25.0" prefWidth="125.0" promptText="yyyy/mm/dd">
          <VBox.margin>
             <Insets bottom="20.0" />
          </VBox.margin>
