--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateTask.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateTask.fxml
@@ -24,7 +24,8 @@
             <Insets bottom="20.0" left="35.0" right="35.0" />
          </VBox.margin>
       </TextField>
-      <DatePicker fx:id="dueDatePicker" prefHeight="25.0" prefWidth="125.0" promptText="Due Date">
+      <Label text="Due Date" />
+      <DatePicker fx:id="dueDatePicker" prefHeight="25.0" prefWidth="125.0" promptText="yyyy/mm/dd">
          <VBox.margin>
             <Insets bottom="20.0" />
          </VBox.margin>
