--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/MonthView.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/MonthView.fxml
@@ -9,9 +9,8 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Circle?>
 
-<VBox fx:id="rootContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.MonthViewController">
+<VBox fx:id="rootContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.MonthViewController">
    <children>
       <HBox alignment="CENTER" prefHeight="0.0" prefWidth="335.0">
          <children>
@@ -51,24 +50,7 @@
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
       </GridPane>
-      <ScrollPane fx:id="dateList" hbarPolicy="NEVER" prefHeight="250.0" prefWidth="335.0">
-         <content>
-            <HBox alignment="CENTER_LEFT" prefHeight="25.0" prefWidth="349.0">
-               <children>
-                  <Circle fill="#1f93ff" radius="8.0" stroke="BLACK" strokeType="INSIDE">
-                     <HBox.margin>
-                        <Insets left="5.0" right="5.0" />
-                     </HBox.margin>
-                  </Circle>
-                  <Label prefHeight="17.0" prefWidth="170.0" text="Deltarune releases">
-                     <HBox.margin>
-                        <Insets right="20.0" />
-                     </HBox.margin>
-                  </Label>
-                  <Label text="2025/06/04 @ 11:00" />
-               </children>
-            </HBox>
-         </content></ScrollPane>
+      <ScrollPane fx:id="dateListPane" hbarPolicy="NEVER" prefHeight="250.0" prefWidth="335.0" />
       <HBox alignment="CENTER" prefHeight="2.0" prefWidth="335.0">
          <children>
             <Button mnemonicParsing="false" onAction="#exit" text="Exit">
