--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu.fxml
@@ -5,22 +5,27 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.VBox?>
 
 <BorderPane fx:id="rootContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" stylesheets="@/com/fss/everythingapp/css/menu.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <ScrollPane fitToWidth="true" BorderPane.alignment="CENTER">
-         <content>
-            <FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" prefWrapLength="0.0" vgap="10.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#openStudentServices" styleClass="material-button" text="Student&#10;Services" textAlignment="CENTER" />
-                  <Button mnemonicParsing="false" onAction="#openCalendar" styleClass="material-button" text="Calendar" textAlignment="CENTER" />
-                  <Button mnemonicParsing="false" onAction="#openBuses" styleClass="material-button" text="Buses" textAlignment="CENTER" />
-               </children>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </FlowPane>
-         </content>
-      </ScrollPane>
+      <VBox alignment="CENTER" BorderPane.alignment="CENTER">
+         <children>
+            <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" style="-fx-background-color: transparent;" vbarPolicy="NEVER">
+               <content>
+                  <FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" prefWrapLength="0.0" vgap="10.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#openStudentServices" styleClass="material-button" text="Student&#10;Services" textAlignment="CENTER" />
+                        <Button mnemonicParsing="false" onAction="#openCalendar" styleClass="material-button" text="Calendar" textAlignment="CENTER" />
+                        <Button mnemonicParsing="false" onAction="#openBuses" styleClass="material-button" text="Buses" textAlignment="CENTER" />
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </FlowPane>
+               </content>
+            </ScrollPane>
+         </children>
+      </VBox>
    </center>
 </BorderPane>
