--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/SleepMenu.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/SleepMenu.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <BorderPane prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.fitness.Controllers.SleepMenuController">
@@ -22,13 +23,18 @@
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
             <Text fx:id="sleepGoal" strokeType="OUTSIDE" strokeWidth="0.0" text="Sleep Goal" />
-            <ProgressBar fx:id="sleepGoalBar" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="sleepGoalBar" prefWidth="200.0" progress="1.0" />
             <Text fx:id="date" strokeType="OUTSIDE" strokeWidth="0.0" />
             <VBox alignment="BOTTOM_CENTER" prefHeight="204.0" prefWidth="335.0">
                <children>
                   <Button fx:id="dateButton" alignment="BOTTOM_CENTER" mnemonicParsing="false" onAction="#setDate" text="Initialize Date" />
                   <VBox alignment="BOTTOM_CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="200.0" prefWidth="100.0">
                      <children>
+                        <Button fx:id="dateButton1" alignment="BOTTOM_CENTER" mnemonicParsing="false" onAction="#setDate" text="Sleep Timer">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Button>
                         <Button alignment="BOTTOM_CENTER" mnemonicParsing="false" onAction="#backToMM" text="Back" />
                      </children>
                   </VBox>
