--- a/app/src/main/resources/com/fss/everythingapp/simulations/projectile_motion.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/simulations/projectile_motion.fxml
@@ -71,6 +71,11 @@
                   <Insets top="10.0" />
                </VBox.margin>
             </Button>
+            <Button fx:id="backToSim" layoutX="10.0" layoutY="201.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="455.0" text="Back to Simulations">
+               <VBox.margin>
+                  <Insets top="15.0" />
+               </VBox.margin>
+            </Button>
          </children>
       </VBox>
       <VBox layoutX="1437.0" layoutY="41.0" prefHeight="233.0" prefWidth="455.0">
