--- a/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fxml/TimeslotsLayout.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fxml/TimeslotsLayout.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -12,12 +14,19 @@
          <children>
             <Label text="Choose a Date" />
             <ChoiceBox fx:id="dateBox" />
+            <Button mnemonicParsing="false" onAction="#onEnterBtnPressed1" text="Enter Date" />
+            <Separator />
             <Label text="Choose a Timeslot" />
             <ChoiceBox fx:id="timeBox" />
+            <Button mnemonicParsing="false" onAction="#enterBtnPressed2" text="Enter Time" />
          </children>
       </VBox>
    </center>
    <bottom>
-      <Button mnemonicParsing="false" onAction="#enterBtnPressed" text="Enter" BorderPane.alignment="CENTER" />
+      <ButtonBar BorderPane.alignment="CENTER">
+        <buttons>
+          <Button mnemonicParsing="false" onAction="#onExitBtnPressed" text="Exit" />
+        </buttons>
+      </ButtonBar>
    </bottom>
 </BorderPane>
