--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu.fxml
@@ -18,6 +18,7 @@
                         <Button mnemonicParsing="false" onAction="#openStudentServices" styleClass="material-button" text="Student&#10;Services" textAlignment="CENTER" />
                         <Button mnemonicParsing="false" onAction="#openCalendar" styleClass="material-button" text="Calendar" textAlignment="CENTER" />
                         <Button mnemonicParsing="false" onAction="#openBuses" styleClass="material-button" text="Buses" textAlignment="CENTER" />
+                        <Button layoutX="224.0" layoutY="64.0" mnemonicParsing="false" onAction="#openFitnessApp" styleClass="material-button" text="Fitness" textAlignment="CENTER" />
                      </children>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
