--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/WeekView.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/WeekView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="rootContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.WeekViewController">
+<VBox fx:id="rootContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.WeekViewController">
    <children>
       <HBox alignment="CENTER" prefHeight="0.0" prefWidth="335.0">
          <children>
@@ -59,6 +59,11 @@
                </HBox.margin>
             </Button>
             <Button mnemonicParsing="false" onAction="#createDate" text="Create">
+               <HBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#loadDates" text="Load">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
