Updated code for file reading and writing

--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu.fxml
@@ -49,6 +49,7 @@
                         <Font size="30.0" />
                      </font>
                   </Button>
+                  <Button mnemonicParsing="false" onAction="#saveInfo" prefHeight="25.0" prefWidth="184.0" text="Save Info (Recommended)" />
                </children>
             </VBox>
          </children>
