Create methods for getting dates
Create constructors for getting dates with a parameter
Start method creation for getting dates with a parameter
Create initialize methods to load dates when loading into a new scene
Add Load button for DayView
Removed unused variables
Removed unused imports
Suppress warnings for unused class variables
Remove unused Users.java

--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/DayView.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/DayView.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="rootContainer" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.DayViewController">
+<VBox fx:id="rootContainer" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.DayViewController">
    <children>
       <HBox alignment="CENTER" minHeight="30.0" style="-fx-background-color: LIGHTGREY;">
          <children>
@@ -102,6 +102,11 @@
                </HBox.margin>
             </Button>
             <Button mnemonicParsing="false" onAction="#createDate" text="Create">
+               <HBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="loadButton" mnemonicParsing="false" onAction="#loadDates" text="Load">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
