--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateDate.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateDate.fxml
@@ -26,7 +26,7 @@
             <Insets bottom="15.0" top="5.0" />
          </VBox.margin>
       </Button>
-      <Button mnemonicParsing="false" onAction="#cancel" text="Cancel">
+      <Button mnemonicParsing="false" onAction="#back" text="Back">
          <VBox.margin>
             <Insets top="5.0" />
          </VBox.margin>
