--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/WeekView.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/WeekView.fxml
@@ -16,7 +16,7 @@
    <children>
       <HBox alignment="CENTER" minHeight="30.0" prefWidth="335.0" style="-fx-background-color: LIGHTGREY;">
          <children>
-            <Button mnemonicParsing="false" onAction="#setDayView" text="Day">
+            <Button mnemonicParsing="false" onAction="#setMonthView" text="Month">
                <HBox.margin>
                   <Insets right="5.0" />
                </HBox.margin>
@@ -26,7 +26,7 @@
                   <Insets left="5.0" right="5.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" onAction="#setMonthView" text="Month">
+            <Button mnemonicParsing="false" onAction="#setDayView" text="Day">
                <HBox.margin>
                   <Insets left="5.0" />
                </HBox.margin>
@@ -59,7 +59,7 @@
       <ScrollPane prefHeight="250.0" prefWidth="335.0" />
       <HBox alignment="CENTER" minHeight="30.0" style="-fx-background-color: LIGHTGREY;">
          <children>
-            <Button mnemonicParsing="false" onAction="#exit" text="Exit">
+            <Button mnemonicParsing="false" onAction="#back" text="Back">
                <HBox.margin>
                   <Insets right="10.0" />
                </HBox.margin>
